<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vehicle_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.avcustom.driverapplication.activities.registration.VehicleRegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/txtVehicleDetails"
        tools:text="@string/please_enter_the_required_details"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:minLines="1"
        android:maxLines="1"
        android:layout_below="@+id/txtVehicleDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/editVehicleMake"
        android:hint="@string/enter_vehicle_make" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:minLines="1"
        android:maxLines="1"
        android:layout_marginTop="13dp"
        android:id="@+id/editVehicleModel"
        android:hint="@string/enter_vehicle_model"
        android:layout_below="@+id/editVehicleMake"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:minLines="1"
        android:maxLines="1"
        android:id="@+id/editVehicleYear"
        android:hint="@string/enter_vehicle_year"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:minLines="1"
        android:maxLines="1"
        android:layout_below="@+id/editVehicleYear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editVehicleRegistration"
        android:hint="@string/enter_vehicle_registration" />

    <Button
        android:text="@string/sign_up"
        android:width="150dp"
        android:height="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnCompleteSignUp"
        android:onClick="onBtnCompleteSignUpClick"/>

</RelativeLayout>
