<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.avcustom.driverapplication.activities.login.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:lines="1"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        android:id="@+id/editTextEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="@string/enter_password"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/btnLogin"
        android:width="100dp"
        android:height="45dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnLoginClick"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/btnSignUp"
        android:onClick="onBtnSignUpClick"/>

    <TextView
        android:text="@string/not_a_member_click_below_to_sign_uo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/txtSignUp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_above="@+id/btnSignUp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
