<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.avcustom.driverapplication.activities.navigationmenu.MainMenuActivity">

    <TextView
        android:text="@string/select_an_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/txtSelectOption"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Button
        android:text="@string/view_deliveries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSelectOption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:height="45dp"
        android:width="150dp"
        android:id="@+id/btnViewDeliveries"
        android:onClick="onBtnViewDeliveriesClick"/>

    <Button
        android:text="@string/show_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnViewDeliveries"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:height="45dp"
        android:width="150dp"
        android:id="@+id/btnShowMap"
        android:onClick="onBtnShowMapClick"/>

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShowMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:height="45dp"
        android:width="150dp"
        android:id="@+id/btnLogout"
        android:onClick="onBtnLogoutClick"/>
</RelativeLayout>
