<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_deliveries"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.avcustom.driverapplication.activities.deliveries.ViewDeliveriesActivity">

    <TextView
        android:text="@string/all_deliveries_to_be_made"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/txtAllDeliveries"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/back_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:height="45dp"
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/deliveries_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDeliveries"
        android:height="360dp"
        android:layout_below="@+id/txtAllDeliveries"
        android:layout_alignParentStart="true" />

</RelativeLayout>
